<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kamcord</string>
    <string name="action_settings">Settings</string>
    <string name="action_request_game">Don\'t see your game?</string>
    <string name="oneOfYourGamesNotListed">One of your games not listed? Let us know!</string>
    <string name="action_signout">Log Out</string>

    <!-- UI String-->
    <string name="toolbarTitle">Kamcord</string>
    <string name="stopRecording">Stop Recording</string>
    <string name="startRecording">Start Recording</string>
    <string name="recordingPaused">Recording Paused</string>

    <!-- Login -->
    <string name="termsAndPolicy">By creating a profile, you are agreeing to Kamcord\'s Terms of Service and Privacy Policy.</string>
    <string name="termsOfService">Terms of Service</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="socialNetworkForGamers">A Social Network for Gamers</string>
    <string name="gamers">Gamers</string>
    <string name="createProfile">Create Profile</string>
    <string name="logIn">Log In</string>
    <string name="skip">Skip</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="loginFailed">Login failed</string>
    <string name="loginFailureMessage">Please check your username and password</string>
    <string name="resetPassword">Reset Password</string>

    <string name="enterEmailForReset">Enter the email you used to sign up for Kamcord. We\'ll email you a link to reset your password.</string>
    <string name="checkYourEmail">We just sent you an email with a link to reset your password.</string>
    <string name="resetPasswordProblem">There was a problem resetting your password. Please make sure you entered the email you signed up for Kamcord with.</string>

    <string name="invalidUsername">Username is invalid</string>
    <string name="youMustEnterUsername">Username is required</string>
    <string name="usernameTooShort">Username is too short</string>
    <string name="usernameTooLong">Username is too long</string>
    <string name="usernameTaken">Username is already taken</string>
    <string name="invalidCharacters">Invalid characters</string>
    <string name="invalidEmail">Email is invalid</string>
    <string name="youMustEnterEmail">Email is required</string>
    <string name="emailTooLong">Email is too long</string>
    <string name="emailTaken">Email is already taken</string>
    <string name="createProfileErrorMessage">Unable to create profile. Please fix the errors or try again later.</string>

    <!-- Notification -->
    <string name="idle">Idle</string>
    <string name="recording">Recording</string>
    <string name="paused">Paused</string>

    <!-- Activity -->
    <!-- Not used? -->
    <string name="selectAGame">Please select a game to record.</string>
    <string name="pressTheButton">Press the green button to start recording %s!</string>
    <string name="kamcordRecordTab">Record</string>
    <string name="kamcordProfileTab">Profile</string>
    <string name="kamcordHomeTab">Home</string>
    <string name="kamcordVideoTab">Top Videos</string>
    <string name="stitchingVideos">Stitching the clips&#8230;</string>
    <string name="install">Install</string>
    <string name="shareThisVideo">Share This Video</string>

    <!-- Not used? -->
    <string name="writeADescription">Write a description&#8230;</string>
    <string name="processing">Processing&#8230;</string>
    <!-- Not used? -->
    <string name="writeATitle">Write a title&#8230;</string>

    <string name="youMustBeLoggedIn">You need to be logged in to Kamcord to perform that action.</string>
    <string name="signInProfilePrompt">You must log in to Kamcord to view your profile.</string>
    <string name="swipeToRefreshRecord">Oops! Pull down to refresh games when your network is ready.</string>
    <string name="errorGettingGameList">Oops! There was an error getting the game list. Please try again later.</string>

    <string name="uploading">Uploading&#8230;</string>
    <string name="yourVideoIsUploading">Your video \"%s\" is uploading!</string>
    <string name="yourVideoFinishedUploading">Your video \"%s\" finished uploading!</string>
    <string name="yourVideoIsUploadingNoTitle">Your video is uploading!</string>
    <string name="yourVideoFinishedUploadingNoTitle">Your video finished uploading!</string>

    <string name="gameRequestEmail">game-requests@kamcord.com</string>
    <string name="canIRecord">Kamcord Game Request</string>
    <string name="iWantToRecord">Hey Kamcord, please let me record from this cool game: </string>

    <string name="defaultNumber">0</string>

    <!-- Profile Fragment -->
    <plurals name="headerVideos">
        <item quantity="one">Video</item>
        <item quantity="other">Videos</item>
    </plurals>
    <plurals name="headerFollowers">
        <item quantity="one">Follower</item>
        <item quantity="other">Followers</item>
    </plurals>
    <plurals name="headerFollowings">
        <item quantity="one">Following</item>
        <item quantity="other">Following</item>
    </plurals>
    <plurals name="videoLikes">
        <item quantity="one">Like</item>
        <item quantity="other">Likes</item>
    </plurals>

    <string name="byAuthorGame">%1$s &#183; %2$s</string>
    <string name="author">%1$s</string>
    <string name="recordAndShare">My Games</string>
    <string name="alsoRecordThese">Popular Games</string>
    <string name="livestreamHeader">Live Streams</string>
    <string name="trendingVideos">Trending Videos</string>

    <plurals name="followersWithCount">
        <item quantity="one">%s Follower</item>
        <item quantity="other">%s Followers</item>
    </plurals>
    <plurals name="videosWithCount">
        <item quantity="one">%s Video</item>
        <item quantity="other">%s Videos</item>
    </plurals>

    <!-- Not used? -->
    <string name="alreadyRecording">Already Recording!</string>
    <!-- Not used? -->
    <string name="youreAlreadyRecording">You\'re already recording %s. Do you want to stop that recording and start another?</string>
    <!-- Not used? -->
    <string name="nothingRecordedYet">Nothing Recorded Yet!</string>
    <!-- Not used? -->
    <string name="kamcordHasntRecorded">Kamcord hasn\'t recorded anything from %1$s yet! Do you want to go back to %1$s?</string>

    <string name="currentlyUploadingPercent">Currently Uploading (%1$d%%)</string>
    <string name="queuedForUpload">Queued for Upload</string>
    <string name="uploadFailed">Upload Failed</string>
    <string name="processingPullToRefresh">Processing. Pull to Refresh.</string>
    <string name="retry">Retry</string>
    <string name="delete">Delete</string>

    <!-- Share -->
    <string name="fragmentShare">Share</string>
    <string name="youTubeShare">YouTube</string>
    <string name="twitterShare">Twitter</string>
    <string name="alsoShare">Also share on</string>
    <!-- Not used? -->
    <string name="writeYourTitle">Please write a title for your video.</string>
    <string name="myLatestVideo">My latest %1$s video</string>

    <string name="timeRecorded">%1$s recorded</string>

    <string name="shareTo">Share to&#8230;</string>
    <string name="externalShareText">%1$s %2$s Recorded with Kamcord for Android</string>
    <string name="externalShareTextNoTitle">%1$s Recorded with Kamcord for Android</string>
    <string name="externalShareTextStream">%1$s %2$s</string>
    <string name="externalShareTextNoTitleStream">%1$s</string>

    <string name="areYouSure">Are you sure?</string>
    <string name="ifYouDeleteThis">If you delete this video, the world will never see it again! :( Delete your awesome vid?</string>
    <string name="deleteVideo">Delete Video</string>
    <string name="failedToDelete">Failed to delete video. Check your network connection.</string>
    <string name="failedToConnect">Failed to connect. Check your network connection.</string>
    <string name="doYouContinue">Do you want to continue?</string>
    <string name="continueUploadVideo">Continue</string>
    <string name="notConnectToFastNetwork">Your device is not on Wifi. Uploading a video may use a significant amount of data.</string>

    <string name="youWillLoseMonster">You will lose your video forever to the video monster!</string>
    <string name="errorPlayingVideo">Error Playing Video</string>
    <string name="thereWasAnError">There was an error trying to play that video. Please try again later.</string>
    <string name="thereWasAnErrorProfile">There was an error fetching your profile information.</string>
    <string name="live">LIVE</string>
    <string name="weveLostTheStream">We\'ve lost the stream. Stand by&#8230;</string>
    <string name="thankYouForWatching">Thank you for watching this live stream. The stream has ended!</string>
    <string name="videoFollow">+ Follow</string>
    <string name="videoFollowing">Following</string>
</resources>
