<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_welcome_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.kamcord.app.activity.LoginActivity">

    <ImageView
        android:id="@+id/kamcord_landing_imageview"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/subtitleTextView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/kamcord_landing_logo" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/skipButton"
        style="@style/KamcordButton.HollowGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:paddingBottom="8dp"
        android:paddingLeft="28dp"
        android:paddingRight="28dp"
        android:paddingTop="8dp"
        android:text="@string/skip" />

    <View
        android:id="@+id/spacer"
        android:layout_width="16dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/loginButton"
        style="@style/KamcordButton.SolidGray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:text="@string/logIn" />

    <Button
        android:id="@+id/createProfileButton"
        style="@style/KamcordButton.SolidGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/loginButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:text="@string/createProfile" />


</RelativeLayout>
