<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/share_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tabsHeight"
        android:background="@color/ColorPrimary"
        android:elevation="3dp"
        app:theme="@style/ToolBarStyle" />

    <ScrollView
        android:id="@+id/share_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/share_toolbar"
        android:background="@android:color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/thumbnailImageView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_thumbnails" />

                <LinearLayout
                    android:id="@+id/processingProgressBarContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#9fff"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ProgressBar
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="8dp"
                        android:indeterminate="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/processing" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/playImageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/video_play" />

                <TextView
                    android:id="@+id/videoDurationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#CC000000"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:textColor="@android:color/white"
                    android:visibility="invisible" />
            </FrameLayout>

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:hint="@string/writeATitle" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/writeADescription"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/shareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btnstyle"
                android:text="@string/shareThisVideo"
                android:textAllCaps="false"
                android:textColor="@color/ButtonTextColor" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
