<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/userCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="0dp">

    <LinearLayout
        android:id="@+id/profile_headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/defaultProfileColor"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/profileLetter"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/kamcord_profile_letter_background"
            android:gravity="center"
            android:text="A"
            android:textColor="@color/defaultProfileColor"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/profile_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="0dp"
            android:text="aaaaaaa"
            android:textColor="@color/ColorPrimary"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/profile_user_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
            android:textColor="@color/ColorPrimary" />

        <LinearLayout
            android:id="@+id/countsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_user_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/defaultNumber"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/ColorPrimary" />

                <TextView
                    android:id="@+id/videosText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center|top"
                    android:text="@string/headerVideos"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/ColorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/followersCountContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_user_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/defaultNumber"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/ColorPrimary" />

                <TextView
                    android:id="@+id/followersText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center|top"
                    android:text="@string/headerFollowers"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/ColorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/followingCountContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_user_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/defaultNumber"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/ColorPrimary" />

                <TextView
                    android:id="@+id/followingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center|top"
                    android:text="@string/headerFollowing"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/ColorPrimary" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/profile_action_menu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end|top"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:src="@drawable/ic_more_vert_white_24dp" />
</android.support.v7.widget.CardView>
